--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
   
   
   
-  <link href="https://rthallisey.io/css/concated.min.css" rel="stylesheet">
-  <link rel="alternate" type="application/rss+xml" href="https://rthallisey.io/index.xml" title="Ryan Hallisey's Blog" />
+  <link href="https://rthallisey.github.io/css/concated.min.css" rel="stylesheet">
+  <link rel="alternate" type="application/rss+xml" href="https://rthallisey.github.io/index.xml" title="Ryan Hallisey's Blog" />
   
   
 </head>
 
   <body class="list-body">
     <nav class="nav-bar side-padding">
-  <h1 class="nav-header"><a href="https://rthallisey.io/" class="nav-text">Ryan Hallisey&#39;s Blog</a></h1>
+  <h1 class="nav-header"><a href="https://rthallisey.github.io/" class="nav-text">Ryan Hallisey&#39;s Blog</a></h1>
   <div class="hamburger-menu">
     <button onclick="hamburgerMenuPressed.call(this)" aria-haspopup="true" aria-expanded="false" aria-controls="menu" aria-label="Menu">
       <span></span>
       <span></span>
     </button>
     <ul id="menu" class="hamburger-menu-overlay">
-      <li><a href="https://rthallisey.io/" class="hamburger-menu-overlay-link">Home</a></li>
+      <li><a href="https://rthallisey.github.io/" class="hamburger-menu-overlay-link">Home</a></li>
       
       
     </ul>
@@ -49,7 +49,7 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/contrib/auto-render.min.js" integrity="sha384-kmZOZB5ObwgQnS/DuDg6TScgOiWWBiVt0plIRkZCmE6rDZGrEOQeHM5PcHi+nyqe" crossorigin="anonymous"
     onload="renderMathInElement(document.body);"></script>
   
-  <script src="https://rthallisey.io/js/core.min.js"></script>
+  <script src="https://rthallisey.github.io/js/core.min.js"></script>
 <script>
   hljs.initHighlightingOnLoad();
 </script>
